# pw3270-keypads

./: .gitignore  Makefile.in  README.md  appdata.xml.in  configure.ac  metainfo.xml.in
debian/: changelog  control  pw3270-keypads.dsc  rules
